@@ -9,15 +9,9 @@ import com.github.cowwoc.requirements.java.ValidationFailure;
 import com.github.cowwoc.requirements.java.internal.diff.ContextLine;
 import com.github.cowwoc.requirements.java.internal.scope.ApplicationScope;
 import com.github.cowwoc.requirements.java.internal.util.Exceptions;
-import com.github.cowwoc.requirements.java.internal.util.Maps;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.StringJoiner;
 
 /**
  * Default implementation of {@code ValidationFailure}.
@@ -25,37 +19,39 @@ import java.util.StringJoiner;
 public final class ValidationFailureImpl implements ValidationFailure
 {
 	private final ApplicationScope scope;
-	private final Configuration config;
+	private final Configuration validatorConfiguration;
 	private final Class<? extends Exception> exceptionType;
 	private final String message;
+	private final Exceptions exceptions;
 	private String messageWithContext;
 	private Throwable cause;
 	/**
 	 * The contextual information associated with the exception (name-value pairs).
 	 */
-	private final List<ContextLine> context = new ArrayList<>(2);
+	private final List<ContextLine> failureContext = new ArrayList<>(2);
 
 	/**
-	 * @param scope         the application configuration
-	 * @param config        the instance configuration
-	 * @param exceptionType the type of exception associated with the failure
-	 * @param message       the message associated with the failure
+	 * @param scope                  the application configuration
+	 * @param validatorConfiguration the instance configuration
+	 * @param exceptionType          the type of exception associated with the failure
+	 * @param message                the message associated with the failure
 	 * @throws NullPointerException     if {@code validator}, {@code exceptionType} or {@code message} are null
-	 * @throws IllegalArgumentException if {@code message} is empty
+	 * @throws IllegalArgumentException if {@code message} is blank
 	 */
-	public ValidationFailureImpl(ApplicationScope scope, Configuration config,
-	                             Class<? extends Exception> exceptionType, String message)
+	public ValidationFailureImpl(ApplicationScope scope, Configuration validatorConfiguration,
+		Class<? extends Exception> exceptionType, String message)
 	{
 		assert (scope != null);
-		assert (config != null);
+		assert (validatorConfiguration != null);
 		assert (exceptionType != null);
 		assert (message != null);
-		assert (!message.trim().isEmpty()) : "message may not be empty";
+		assert (!message.isBlank()) : "message may not be blank";
 
 		this.scope = scope;
-		this.config = config;
+		this.validatorConfiguration = validatorConfiguration;
 		this.exceptionType = exceptionType;
 		this.message = message;
+		this.exceptions = scope.getExceptions();
 	}
 
 	@Override
@@ -86,109 +82,17 @@ public final class ValidationFailureImpl implements ValidationFailure
 		return this;
 	}
 
-	@Override
-	public String getMessage()
-	{
-		if (messageWithContext == null)
-			this.messageWithContext = createMessageWithContext();
-		return messageWithContext;
-	}
-
-	/**
-	 * Returns the failure message with contextual information.
-	 *
-	 * @return the failure message with contextual information
-	 */
-	private String createMessageWithContext()
-	{
-		Map<String, Object> configContext = config.getContext();
-		assert (Maps.isUnmodifiable(configContext)) : "configContext may not be modifiable";
-
-		Map<String, Object> threadContext = scope.getThreadConfiguration().get().getContext();
-		assert (Maps.isUnmodifiable(threadContext)) : "threadContext may not be modifiable";
-
-		List<ContextLine> mergedContext;
-		if (configContext.isEmpty() && threadContext.isEmpty())
-			mergedContext = context;
-		else
-		{
-			mergedContext = new ArrayList<>(context.size() + threadContext.size() + configContext.size());
-			Set<String> existingKeys = new HashSet<>();
-			for (ContextLine entry : context)
-			{
-				mergedContext.add(entry);
-				String key = entry.getName();
-				if (!key.isEmpty())
-					existingKeys.add(key);
-			}
-
-			for (Entry<String, Object> entry : configContext.entrySet())
-			{
-				if (existingKeys.add(entry.getKey()))
-					mergedContext.add(new ContextLine(entry.getKey(), entry.getValue()));
-			}
-
-			for (Entry<String, Object> entry : threadContext.entrySet())
-			{
-				if (existingKeys.add(entry.getKey()))
-					mergedContext.add(new ContextLine(entry.getKey(), entry.getValue()));
-			}
-		}
-
-		// null entries denote a newline between DIFF sections
-		int maxKeyLength = 0;
-		for (ContextLine entry : mergedContext)
-		{
-			String key = entry.getName();
-			if (key.isEmpty())
-				continue;
-			int length = key.length();
-			if (length > maxKeyLength)
-				maxKeyLength = length;
-		}
-
-		StringJoiner messageWithContext = new StringJoiner("\n");
-		messageWithContext.add(message);
-		StringBuilder line = new StringBuilder();
-		for (ContextLine entry : mergedContext)
-		{
-			line.delete(0, line.length());
-			String key = entry.getName();
-			if (!key.isEmpty())
-				line.append(alignLeft(key, maxKeyLength) + ": ");
-			line.append(config.toString(entry.getValue()));
-			messageWithContext.add(line.toString());
-		}
-		return messageWithContext.toString();
-	}
-
-	/**
-	 * @param text      the {@code String} to align
-	 * @param minLength the minimum length of {@code text}
-	 * @return {@code text} padded on the right with spaces until its length is greater than or equal to
-	 * {@code minLength}
-	 */
-	private static String alignLeft(String text, int minLength)
-	{
-		int actualLength = text.length();
-		if (actualLength > minLength)
-			return text;
-		return text + " ".repeat(minLength - actualLength);
-	}
-
 	/**
 	 * Adds contextual information associated with the failure.
 	 *
 	 * @param name  the name of a variable
 	 * @param value the value of the variable
 	 * @return this
-	 * @throws AssertionError if {@code name} is null or empty
+	 * @throws AssertionError if the key is null, blank or contains a colon
 	 */
 	public ValidationFailureImpl addContext(String name, Object value)
 	{
-		assert (name != null) : "name may not be null";
-		assert (!name.trim().isEmpty()) : "name may not be empty";
-		context.add(new ContextLine(name, value));
+		failureContext.add(new ContextLine(name, value, false));
 		messageWithContext = null;
 		return this;
 	}
@@ -203,9 +107,20 @@ public final class ValidationFailureImpl implements ValidationFailure
 	public ValidationFailureImpl addContext(List<ContextLine> context)
 	{
 		assert (context != null) : "context may not be null";
-		this.context.addAll(context);
+		this.failureContext.addAll(context);
 		messageWithContext = null;
 		return this;
+	}
+
+	@Override
+	public String getMessage()
+	{
+		if (messageWithContext == null)
+		{
+			this.messageWithContext = exceptions.getContextMessage(
+				scope.getThreadConfiguration().get().getContext(), validatorConfiguration, message, failureContext);
+		}
+		return messageWithContext;
 	}
 
 	/**
